--- a/sass/_dh.scss
+++ b/sass/_dh.scss
@@ -22,6 +22,7 @@
             margin: 0 auto;
             font-size: 1em;
             line-height: 1.8em;
+            padding: 3em;
 
             .dhbtn{
                 font-size: 1em;
@@ -65,8 +66,39 @@
             justify-content: center;
             align-items: center;
         }
+    } 
+}
+
+@media only screen and (max-width: 600px){
+    .dh{
+        .top{
+            h4{
+                font-size: 1em;
+                padding: 0 3em 2em 3em;
+            }
+            .topText{
+     
+                font-size: 0.9em;
+                padding: 0 1em;
+            }
+        }
+        .bot{
+            padding-bottom: 8em;
+            .g1{
+                justify-content: center;
+                img{
+                    width: 45%;
+                }
+            }
+
+            .g2{
+                justify-content: center;
+                img{
+                    width: 45%;
+                }
+            }
+        }
     }
-    
 }
 
 
