--- a/sass/_dryaged.scss
+++ b/sass/_dryaged.scss
@@ -67,48 +67,60 @@
     }
 }
 
-
-
 @media only screen and (max-width: 1100px){
     .dryAged{
         flex-direction: column-reverse;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
+        padding: 0.5em 0;
+        padding-bottom: 5em;
+        .daLeft{
+            padding-top: 2em;
+            text-align: center;
 
-        .daRight{
-            margin: 0 auto;
-            padding: 4em 0;
+            .daButtons{
+                justify-content: center;
+            }
         }
     }
 }
 
 @media only screen and (max-width: 600px){
     .dryAged{
-        justify-content: center;
         align-items: center;
-        text-align: center;
-        .daLeft{
-    
-            .daTxt{
-                .daButtons{
-                    align-items: center;
-                }
-            }
+        justify-content: center;
+       
+        
+        .daTxt{
+            padding: 1em;
+            font-size: 0.9em;
         }
 
         .daRight{
+            padding-top: 1em;
             .daIMG{
-                align-items: center;
                 text-align: center;
+                align-items: center;
                 img{
-                    width: 80%;
+                    width: 70%;
                 }
 
                 .botIMG{
-                    width: 80%;
+                    width: 70%;
                 }
             }
         }
     }
 }
+
+@media only screen and (max-width: 375px){
+    .daTxt{
+        padding: 1em;
+        font-size: 0.7em;
+    }
+    .daButtons{
+        font-size: 0.9em;
+    }
+}
+
 
