--- a/sass/_fleischversand.scss
+++ b/sass/_fleischversand.scss
@@ -1,14 +1,17 @@
 .fleischversand { 
     height: 50vh;
-    background-image: url("../img/meat.png");
-    background-color: black;
-    background-attachment: fixed;
+    background-image: url(../img/meat.png);
     background-repeat: no-repeat;
-
+    background-attachment: fixed;
+    background-position: bottom;
+    background-color: #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    align-self: center;
+    text-align: center; 
+    
 
     h2{
         font-size: 2em;
@@ -26,5 +29,11 @@
         border-radius: 2em;
         max-width: 375px;
         margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .fleischversand{
+        background-position: center;
     }
 }
