--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -16,7 +16,6 @@ footer{
                 gap: 0.3em;
                 align-items: start;
                 color: #fff;
-
             }
 
             .displayProop{
@@ -57,5 +56,37 @@ footer{
             color: rgba($color: #fff, $alpha: 0.7);
         }
 
+    }
+}
+
+@media only screen and (max-width: 968px){
+    footer{
+        .container{
+            flex-direction: column;
+            gap: 5em;
+
+            .contact{
+                padding-top: 2em;
+                align-items: center;
+                .location{
+                    text-align: center;
+                }
+                img{
+                    display: none;
+                }
+            }
+
+            .social{
+                flex-direction: column;
+                padding-bottom: 1.5em;
+            }
+        }
+
+        .dimmedtrack{
+            flex-direction: column;
+            align-items: center;
+            gap: 3em;
+            padding: 3em 0;
+        }
     }
 }
