--- a/sass/style.css
+++ b/sass/style.css
@@ -1,53 +1,118 @@
-.hItems .navBar {
+header {
+  background-color: rgb(181, 0, 20);
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 99;
+}
+header .navigation-panel {
+  padding: 2em;
+}
+header .navigation-panel .subcontainer .navbar {
   display: flex;
-  gap: 2em;
-  justify-content: center;
-  align-items: center;
-  background-color: #b50014;
-  height: 4em;
-}
-.hItems .navBar #logo {
-  margin-top: 7em;
-  z-index: 1;
-}
-.hItems .navBar .icon {
-  display: none;
-}
-.hItems .nav {
-  padding: 2em 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
+  justify-content: end;
   gap: 1em;
-}
-.hItems .nav .navItems .navLink {
-  text-decoration: none;
-  font-size: 16px;
-  color: #fff;
-  font-weight: 700;
-}
-.hItems .nav .navItems .download {
-  display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 0.3em;
-  font-size: 14px;
 }
-
-.workTime {
+header .navigation-panel .subcontainer .navbar .navbarLogo {
+  position: absolute;
+  left: 15%;
+  top: 5%;
+  z-index: 2;
+}
+header .navigation-panel .subcontainer .navbar .navMenu {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  gap: 1em;
+  list-style: none;
+}
+header .navigation-panel .subcontainer .navbar .navMenu .nav-item .nav-link {
+  text-decoration: none;
+  font-weight: 700;
+  color: #fff;
+}
+header .navigation-panel .subcontainer .navbar .hamburger {
+  display: none;
+  cursor: pointer;
+}
+header .navigation-panel .subcontainer .navbar .hamburger .bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px 0;
+  transition: all 0.3 ease;
+  background-color: #fff;
+}
+header .navigation-panel .subcontainer .navbar .download {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  text-decoration: none;
+  font-weight: 700;
+  color: #fff;
+  margin-right: 1em;
+}
+header .workTime {
   background-color: #252525;
   padding: 0.8em 0;
   font-size: 14px;
   color: #fff;
   text-align: right;
 }
-.workTime .maxWidth {
+header .workTime .maxWidth {
   max-width: 1200px;
   margin: 0 auto;
 }
 
+@media only screen and (max-width: 1340px) {
+  header .navigation-panel .subcontainer .navbar .navbarLogo {
+    left: 0;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  header .navigation-panel {
+    padding: 1em;
+  }
+  header .navigation-panel .subcontainer .navbar {
+    justify-content: end;
+  }
+  header .navigation-panel .subcontainer .navbar .navbarLogo {
+    left: 0;
+    top: 0;
+    width: 15%;
+  }
+  header .navigation-panel .subcontainer .navbar .hamburger {
+    display: block;
+  }
+  header .navigation-panel .subcontainer .navbar .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  header .navigation-panel .subcontainer .navbar .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  header .navigation-panel .subcontainer .navbar .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  header .navigation-panel .subcontainer .navbar .navMenu {
+    position: fixed;
+    right: -100%;
+    top: 100px;
+    gap: 0;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(181, 0, 20);
+    width: 100%;
+    height: 60vh;
+    transition: 0.3s;
+  }
+  header .navigation-panel .subcontainer .navbar .navMenu .nav-item {
+    margin: 1em 0;
+  }
+  header .navigation-panel .subcontainer .navbar .navMenu.active {
+    right: 0;
+  }
+}
 .hero {
   position: relative;
 }
@@ -55,8 +120,8 @@
   display: block;
   width: 100%;
 }
-
-.heroText {
+.hero .heroText {
+  z-index: 2;
   position: absolute;
   top: 30%;
   background-color: rgba(0, 0, 0, 0.3);
@@ -64,7 +129,7 @@
   padding: 3em;
   padding-left: 15em;
 }
-.heroText h2 {
+.hero .heroText h2 {
   max-width: 280px;
   margin: 0 auto;
   font-size: 2.2em;
@@ -74,7 +139,7 @@
   line-height: 1.2em;
   padding-bottom: 0.8em;
 }
-.heroText p {
+.hero .heroText p {
   max-width: 280px;
   margin: 0 auto;
   text-align: left;
@@ -84,46 +149,41 @@
   line-height: 1.5em;
 }
 
-@media screen and (max-width: 1660px) {
-  .heroText {
-    top: 20%;
-  }
-}
-@media screen and (max-width: 1385px) {
-  .heroText {
+@media only screen and (max-width: 1330px) {
+  .hero .heroText {
     top: 25%;
+    padding: 2em;
+    padding-left: 15em;
+  }
+  .hero .heroText h2 {
+    font-size: 1.8em;
+  }
+  .hero .heroText p {
+    font-size: 0.8em;
   }
 }
-@media screen and (max-width: 1240px) {
-  .heroText {
-    top: 20%;
+@media only screen and (max-width: 1100px) {
+  .hero {
+    background-color: black;
   }
-}
-@media screen and (max-width: 1100px) {
-  .heroText {
+  .hero .heroText {
     position: unset;
-    background-color: #000;
-    max-width: 100%;
-    padding: 0;
+    max-width: unset;
+    padding-left: unset;
+    padding: 0.5em;
+    background-color: black;
   }
-}
-@media screen and (max-width: 968px) {
-  .hItems .navBar {
-    position: relative;
+  .hero .heroText h2 {
+    text-align: center;
+    font-size: 2em;
+    max-width: unset;
+    padding-bottom: unset;
   }
-  .hItems .navBar .nav {
-    display: none;
-    position: absolute;
-    top: 20%;
-    right: 60px;
-    z-index: 100;
-    background-color: #b50014;
-    animation: normal;
-  }
-  .hItems .navBar .icon {
-    position: absolute;
-    right: 50px;
-    display: block;
+  .hero .heroText p {
+    padding: 1em 2em;
+    text-align: center;
+    font-size: 1em;
+    max-width: unset;
   }
 }
 .dryAged {
@@ -190,32 +250,49 @@
 @media only screen and (max-width: 1100px) {
   .dryAged {
     flex-direction: column-reverse;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    padding: 0.5em 0;
+    padding-bottom: 5em;
   }
-  .dryAged .daRight {
-    margin: 0 auto;
-    padding: 4em 0;
+  .dryAged .daLeft {
+    padding-top: 2em;
+    text-align: center;
+  }
+  .dryAged .daLeft .daButtons {
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 600px) {
   .dryAged {
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    text-align: center;
   }
-  .dryAged .daLeft .daTxt .daButtons {
-    align-items: center;
+  .dryAged .daTxt {
+    padding: 1em;
+    font-size: 0.9em;
+  }
+  .dryAged .daRight {
+    padding-top: 1em;
   }
   .dryAged .daRight .daIMG {
-    align-items: center;
     text-align: center;
+    align-items: center;
   }
   .dryAged .daRight .daIMG img {
-    width: 80%;
+    width: 70%;
   }
   .dryAged .daRight .daIMG .botIMG {
-    width: 80%;
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .daTxt {
+    padding: 1em;
+    font-size: 0.7em;
+  }
+  .daButtons {
+    font-size: 0.9em;
   }
 }
 .grillkurs {
@@ -274,6 +351,21 @@
     padding-bottom: 3em;
   }
 }
+@media only screen and (max-width: 600px) {
+  .grillleft {
+    align-self: center;
+    text-align: center;
+  }
+  .grillleft .glTxt {
+    text-align: center !important;
+  }
+  .grillleft .glTxt h2 {
+    font-size: 1.5em !important;
+  }
+  .grillleft .glTxt ul li .lItem {
+    font-size: 3.5em;
+  }
+}
 .dh {
   text-align: center;
   color: #fff;
@@ -295,6 +387,7 @@
   margin: 0 auto;
   font-size: 1em;
   line-height: 1.8em;
+  padding: 3em;
 }
 .dh .top .topText .dhbtn {
   font-size: 1em;
@@ -331,6 +424,31 @@
     align-items: center;
   }
 }
+@media only screen and (max-width: 600px) {
+  .dh .top h4 {
+    font-size: 1em;
+    padding: 0 3em 2em 3em;
+  }
+  .dh .top .topText {
+    font-size: 0.9em;
+    padding: 0 1em;
+  }
+  .dh .bot {
+    padding-bottom: 8em;
+  }
+  .dh .bot .g1 {
+    justify-content: center;
+  }
+  .dh .bot .g1 img {
+    width: 45%;
+  }
+  .dh .bot .g2 {
+    justify-content: center;
+  }
+  .dh .bot .g2 img {
+    width: 45%;
+  }
+}
 .custome {
   display: flex;
   background-color: #A62120;
@@ -363,30 +481,58 @@
   padding-bottom: 1em;
 }
 
+@media only screen and (max-width: 1200px) {
+  .cusRight .crTxt {
+    font-size: 0.9em;
+    padding: 1em;
+  }
+}
 @media only screen and (max-width: 1100px) {
   .custome {
     flex-direction: column-reverse;
   }
   .custome .cusRight {
-    padding: 3em 0;
+    padding: 2em 0;
   }
-}
-@media only screen and (max-width: 600px) {
   .custome .cusRight .crTxt {
     text-align: center;
-    font-size: 1.2em;
-    line-height: 1.7em;
+  }
+  .custome .cusRight .crTxt h2 {
+    line-height: 1.5em;
+    padding-bottom: 1em;
+  }
+  .custome .cusRight .crTxt h3 {
+    line-height: 1.5em;
+    padding: 1em 2em;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .custome {
+    flex-direction: column-reverse;
+  }
+  .custome .cusRight {
+    padding: 2em 0;
+  }
+  .custome .cusRight .crTxt {
+    text-align: center;
+  }
+  .custome .cusRight .crTxt h2 {
+    line-height: 1.5em;
+    font-size: 2em;
   }
 }
 .fleischversand {
   height: 50vh;
-  background-image: url("../img/meat.png");
-  background-color: black;
-  background-attachment: fixed;
+  background-image: url(../img/meat.png);
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: bottom;
+  background-color: #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  align-self: center;
   text-align: center;
 }
 .fleischversand h2 {
@@ -406,10 +552,15 @@
   margin: 0 auto;
 }
 
+@media only screen and (max-width: 1100px) {
+  .fleischversand {
+    background-position: center;
+  }
+}
 .genussnetz {
   background-color: #000;
   text-align: center;
-  padding-top: 7em;
+  padding: 7em 0;
 }
 .genussnetz .geContent {
   color: #fff;
@@ -417,7 +568,6 @@
   align-items: center;
   justify-content: center;
   gap: 20em;
-  padding-bottom: 16em;
 }
 .genussnetz .geContent .geTxt {
   text-align: left;
@@ -438,46 +588,62 @@
 }
 
 @media only screen and (max-width: 1100px) {
-  .genussnetz {
-    padding: 4em 0;
-  }
   .genussnetz .geContent {
     flex-direction: column;
-    gap: 3em;
+    gap: 10em;
   }
   .genussnetz .geContent .geTxt {
     text-align: center;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .genussnetz .geContent .geTxt h2 {
+    font-size: 1.8em;
+  }
+  .genussnetz .geContent .geLogo img {
+    width: 90%;
   }
 }
 .award {
   background-color: #000;
   color: #fff;
   text-align: center;
-}
-.award .awardCon {
+  padding: 8em 0;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  gap: 2em;
   justify-content: center;
-  gap: 5em;
-  text-align: center;
+  align-items: center;
 }
-.award .awardCon .awIMG {
-  padding-bottom: 1em;
+.award .awTop {
+  display: flex;
+  gap: 2em;
+  align-items: center;
 }
-.award .awardCon .contentP {
+.award .awBot {
+  display: flex;
+  gap: 1em;
+  align-items: center;
+}
+.award .contentP {
   font-weight: 300;
-  line-height: 1.7em;
-}
-.award #vonal {
-  padding-top: 8em;
+  text-align: center;
+  line-height: 2em;
+  color: rgba(255, 255, 255, 0.5);
 }
 
+@media only screen and (max-width: 968px) {
+  .award {
+    flex-direction: column-reverse;
+  }
+}
 .comments {
   display: flex;
   flex-direction: column;
   background-color: #000;
   color: #fff;
   text-align: center;
+  justify-content: center;
   gap: 2em;
   padding-bottom: 8em;
 }
@@ -501,10 +667,9 @@
   position: relative;
   font-weight: 300;
   line-height: 24px;
-  height: 480px;
   background-color: #333;
   max-width: 500px;
-  padding: 5em 2em;
+  padding: 2em 5em;
 }
 .comments .cards .active .cardText .comment {
   padding-bottom: 5em;
@@ -543,12 +708,7 @@
   cursor: pointer;
 }
 .comments .cards .inactive {
-  height: 290px;
-  max-width: 480px;
-  margin: auto 0;
-  padding: 10em 4em;
-  padding: 5em 2em;
-  background-color: #111;
+  background-color: #222;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -556,6 +716,9 @@
           text-emphasis: center;
   font-weight: 300;
   line-height: 1.5em;
+  max-width: 480px;
+  margin: auto 0;
+  padding: 5em 2em;
 }
 .comments .cards .inactive .comment {
   padding-bottom: 2em;
@@ -583,6 +746,35 @@
   cursor: pointer;
 }
 
+@media only screen and (max-width: 968px) {
+  .comments .cards .inactive {
+    display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .comments .cards {
+    max-width: unset;
+    padding: 2em;
+    padding-bottom: 5em;
+  }
+  .comments .cards .active {
+    padding: 1em 0.5em;
+    background-color: #222;
+  }
+  .comments .cards .active #quote {
+    display: none;
+  }
+  .comments .cards .active #leftClick {
+    top: 107%;
+    left: 32%;
+    width: 15%;
+  }
+  .comments .cards .active #rightClick {
+    top: 107%;
+    right: 32%;
+    width: 15%;
+  }
+}
 footer {
   background-color: #B50014;
 }
@@ -635,6 +827,32 @@ footer .dimmedtrack .studioPresent {
   color: rgba(255, 255, 255, 0.7);
 }
 
+@media only screen and (max-width: 968px) {
+  footer .container {
+    flex-direction: column;
+    gap: 5em;
+  }
+  footer .container .contact {
+    padding-top: 2em;
+    align-items: center;
+  }
+  footer .container .contact .location {
+    text-align: center;
+  }
+  footer .container .contact img {
+    display: none;
+  }
+  footer .container .social {
+    flex-direction: column;
+    padding-bottom: 1.5em;
+  }
+  footer .dimmedtrack {
+    flex-direction: column;
+    align-items: center;
+    gap: 3em;
+    padding: 3em 0;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -648,4 +866,16 @@ footer .dimmedtrack .studioPresent {
 .cont {
   max-width: 1320px;
   margin: 0 auto;
+}
+
+.vonal {
+  width: 80%;
+}
+
+.break {
+  text-align: center;
+  background-color: black;
+}
+.break img {
+  width: 80%;
 }/*# sourceMappingURL=style.css.map */
