--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -1,170 +1,127 @@
-.comments {
-  display: flex;
-  flex-direction: column;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  justify-content: center;
-  gap: 2em;
-  padding-bottom: 8em;
-
-  .comHeader {
-    h4 {
-      color: #555;
-      font-size: 1.2em;
-      font-weight: 700;
-      padding-top: 2em;
-      padding-bottom: 1em;
-    }
-
-    h2 {
-      font-size: 2.5em;
-      padding-bottom: 2em;
-    }
-  }
-
-  .cards {
+.comments{
+    overflow: hidden !important;
     display: flex;
-    gap: 1em;
+    flex-direction: column;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
     justify-content: center;
+    gap: 2em;
+    padding-bottom: 8em;
 
-    .active {
-      position: relative;
-      font-weight: 300;
-      line-height: 24px;
-      background-color: #333;
-      max-width: 500px;
-      padding: 2em 5em;
-
-      .cardText {
-        .comment {
-          padding-bottom: 5em;
-        }
-      }
-      .cardHead {
+    .comHeader {
+      h4 {
+        color: #555;
+        font-size: 1.2em;
+        font-weight: 700;
+        padding-top: 2em;
         padding-bottom: 1em;
-        img {
-          display: block;
-          margin: 0 auto;
-          padding: 0.5em 0;
-        }
       }
-
-      .user {
-        font-weight: 400;
-        font-size: 1em;
+  
+      h2 {
+        font-size: 2.5em;
+        padding-bottom: 2em;
       }
+    }
 
-      #quote {
-        position: absolute;
-        bottom: -22px;
-        right: 15px;
-      }
-
-      #leftClick{
-        position: absolute;
-        top: 50%;
-        left: -2.5em;
-
-        &:hover{
-            cursor: pointer;
-        }
-      }
+    .swipeComments{
+      position: relative;
 
       #rightClick{
+        z-index: 100;
         position: absolute;
-        top: 50%;
-        right: -2.5em;
-
+        top: 48%;
+        right: 31%;
         &:hover{
-            cursor: pointer;
+          cursor: pointer;
+        }
+      }
+    
+      #leftClick{
+        position: absolute;
+        top: 48%;
+        z-index: 100;
+        left: 31%;
+        &:hover{
+          cursor: pointer;
+        }
+      }
+      .swiper-wrapper{
+        .swiper-slide{
+          max-width: 580px;
+          margin: 0 auto;
+          display: flex;
+          gap: 1em;
+          justify-content: center;
+          .card{  
+            position: relative;
+              font-weight: 300;
+              line-height: 24px;
+              background-color: #333;
+              max-width: 500px;
+              padding: 2em 5em;
+        
+              .cardText {
+                .comment {
+                  padding-bottom: 5em;
+                }
+              }
+
+              .cardHead {
+                padding-bottom: 1em;
+                img {
+                  display: block;
+                  margin: 0 auto;
+                  padding: 0.5em 0;
+                }
+              }
+        
+              .user {
+                font-weight: 400;
+                font-size: 1em;
+              }
+        
+              #quote {
+                position: absolute;
+                bottom: -22px;
+                right: 15px;
+              }  
+          }
+
+          .card1{
+            .comment{
+              padding-top: 5em;
+              padding-bottom: 7em;
+            }
+
+            .user{
+              padding-bottom: 5em;
+            }
+          }
         }
       }
     }
 
-    .inactive {
-      background-color: #222;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-emphasis: center;
-      font-weight: 300;
-      line-height: 1.5em;
-
-      .comment{
-        padding-bottom: 2em;
-        padding: 2em;
-      } 
-
-      .user{
-        color: #666;
-        font-weight: 400;
-      }
-
-      max-width: 480px;
-      margin: auto 0;
-      padding: 5em 2em;
-
-      img {
-        display: none;
-      }
-
-    }
-  }
-
-  .comFooter {
-    padding-top: 2em;
-    .combtn {
-      padding: 0.7em 3em;
-      border: 1px solid #fff;
-      border-radius: 2em;
-      background-color: rgba(166, 33, 32, 1);
-      font-size: 1em;
-      color: #fff;
-
-      &:hover {
-        cursor: pointer;
+    .comFooter {
+      padding-top: 2em;
+      .combtn {
+        padding: 0.7em 3em;
+        border: 1px solid #fff;
+        border-radius: 2em;
+        background-color: rgba(166, 33, 32, 1);
+        font-size: 1em;
+        color: #fff;
+  
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
-  }
 }
 
-@media only screen and (max-width: 968px){
-  .comments{
-    .cards{
-      .inactive{
-        display: none;
-      }
-    }
-  }
-}
 
-@media only screen and (max-width: 600px) {
-  .comments{
-    .cards{
-      max-width: unset;
-      padding: 2em;
-      padding-bottom: 5em;
-      .active{
-        padding: 1em 0.5em;
-        background-color: #222;
-        #quote{
-          display: none;
-        }
-        #leftClick{
-          top: 107%;
-          left: 32%;
-          width: 15%;
-        }
 
-        #rightClick{
-          top: 107%;
-          right: 32%;
-          width: 15%;
-        }
-      }
-    }
-  }
-}
+
+
 
 
