--- a/sass/style.css
+++ b/sass/style.css
@@ -684,6 +684,7 @@ header .workTime .themeToggle:hover {
   padding-bottom: 2em;
 }
 .comments .swipeComments {
+  padding: 7em 0;
   position: relative;
 }
 .comments .swipeComments #rightClick {
@@ -761,6 +762,72 @@ header .workTime .themeToggle:hover {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 1480px) {
+  .comments .swipeComments #rightClick {
+    right: 20%;
+  }
+  .comments .swipeComments #leftClick {
+    left: 20%;
+  }
+  .comments .swipeComments .swiper-wrapper {
+    max-width: 900px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .comments .swipeComments #rightClick {
+    right: 5%;
+  }
+  .comments .swipeComments #leftClick {
+    left: 5%;
+  }
+  .comments .swipeComments .swiper-wrapper {
+    max-width: 600px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .comments .swipeComments #rightClick {
+    top: 87%;
+    width: 15%;
+    right: 31%;
+  }
+  .comments .swipeComments #leftClick {
+    top: 87%;
+    width: 15%;
+    left: 31%;
+  }
+  .comments .swipeComments .swiper-wrapper {
+    max-width: 480px;
+    margin: 0 auto;
+  }
+  .comments .swipeComments .swiper-wrapper .swiper-slide {
+    max-width: unset;
+    margin: unset;
+  }
+  .comments .swipeComments .swiper-wrapper .swiper-slide .card {
+    padding: 1.5em 2em;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .comments .swipeComments #rightClick {
+    top: 87%;
+    width: 15%;
+  }
+  .comments .swipeComments #leftClick {
+    top: 87%;
+    width: 15%;
+  }
+  .comments .swipeComments .swiper-wrapper {
+    max-width: 310px;
+    margin: 0 auto;
+  }
+  .comments .swipeComments .swiper-wrapper .swiper-slide {
+    max-width: unset;
+    margin: unset;
+  }
+  .comments .swipeComments .swiper-wrapper .swiper-slide .card {
+    padding: 1em 0.4em;
+  }
+}
 footer {
   background-color: #B50014;
 }
