--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -101,6 +101,11 @@ header{
         }
       }
     }
+
+    .workTime{
+      padding: 1.5em 0;
+      text-align: center;
+    }
   }
 }
 
@@ -154,7 +159,7 @@ header{
           .navMenu{
             position: fixed;
             right: -100%;
-            top: 100px;
+            top: 60px;
             gap: 0;
             flex-direction: column;
             align-items: center;
@@ -178,3 +183,34 @@ header{
   }
 }
 
+@media only screen and (max-width: 1340px){
+  header{
+    .navigation-panel{
+      .subcontainer{
+        .navbar{
+          .navbarLogo{
+            left: 0;
+          }
+        }
+      }
+    }
+
+    .workTime{
+      padding: 1.5em 0;
+      text-align: center;
+    }
+  }
+}
+
+@media only screen and (max-width: 530px){
+  header{
+    .workTime{
+      padding: 1.5em 0;
+      text-align: center;
+      font-size: 0.8em;
+      .themeToggle{
+        margin-top: 1em;
+      }
+    }
+  }
+}
