--- a/sass/_lightMode.scss
+++ b/sass/_lightMode.scss
@@ -1,9 +1,9 @@
 .lightMode{
     @media  (max-width: 1100px) {
             .hero{
-                background-color: rgba($color: #000000, $alpha: 0.2);
+                background-color: rgba($color: #000000, $alpha: 0.1) !important;
                 .heroText{
-                    background-color: rgba($color: #000000, $alpha: 0.2);
+                    background-color: rgba($color: #000000, $alpha: 0.1);
                     h2, p{
                         color: #A62120;
                     }
@@ -90,6 +90,17 @@
 
     .comments{
         background-color: rgba($color: #000000, $alpha: 0.2);
+        h2{
+            color: #A62120;
+        }
+
+        .comFooter{
+            .combtn{
+                background-color: #fff;
+                color: #A62120;
+                border: 1px solid #A62120;
+            }
+        }
 
     }
     
