--- a/sass/_swiper.scss
+++ b/sass/_swiper.scss
@@ -13,8 +13,8 @@
         }
 
         .swiper-button-next{
-            top: 94% !important;
-            right: 44% !important;
+            top: 93% !important;
+            right: 43% !important;
             --swiper-navigation-size: 20px;
             --swiper-theme-color: #fff;
 
@@ -24,8 +24,8 @@
         }
 
         .swiper-button-prev{
-            top: 94% !important;
-            left: 44% !important;
+            top: 93% !important;
+            left: 43% !important;
             --swiper-navigation-size: 20px;
             --swiper-theme-color: #fff;
 
@@ -34,6 +34,41 @@
             padding: 1em;
         }
 
+        @media only screen and (max-width: 1550px){
+            .swiper-button-next{
+                top: 92% !important;
+                right: 41% !important;
+            }
+
+            .swiper-button-prev{
+                top: 92% !important;
+                left: 41% !important;
+            }
+        }
+
+        @media only screen and (max-width: 1400px){
+            .swiper-button-next{
+                top: 91% !important;
+                right: 41% !important;
+            }
+
+            .swiper-button-prev{
+                top: 91% !important;
+                left: 41% !important;
+            }
+        }
+
+        @media only screen and (max-width: 1200px){
+            .swiper-button-next{
+                top: 90% !important;
+                right: 40% !important;
+            }
+
+            .swiper-button-prev{
+                top: 90% !important;
+                left: 40% !important;
+            }
+        }
         
         @media only screen and (max-width: 1100px){
             .swiper-button-next{
