--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,9 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    button:hover{
+        cursor: pointer;
+    }
 
     html{
         scroll-behavior: smooth;
