--- a/sass/style.css
+++ b/sass/style.css
@@ -1126,6 +1126,8 @@ footer .dimmedtrack .studioPresent {
   z-index: 100;
   text-align: center;
   font-size: 1.5em;
+  -webkit-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
   animation: entrance 0s ease 0s 1 normal forwards;
   display: none;
@@ -1197,4 +1199,4 @@ footer .dimmedtrack .studioPresent {
 }
 .break img {
   width: 80%;
-}/*# sourceMappingURL=style.css.map */
+}
