--- a/studiop-brath/src/components/sass/header.scss
+++ b/studiop-brath/src/components/sass/header.scss
@@ -5,7 +5,7 @@ header{
   top: 0;
   z-index: 99;
   .navigation-panel{
-    padding: 1em;
+    padding: 2em;
     .subcontainer{
       .navbar{
         display: flex;
@@ -41,7 +41,7 @@ header{
             width: 25px;
             height: 3px;
             margin: 5px 0;
-            transition: all 0.3 ease;
+            transition: all 0.3s ease;
             background-color: #fff;
           }
         }
@@ -90,7 +90,7 @@ header{
 }
 
 
-@media only screen and (max-width: 1340px){
+@media only screen and (max-width: 1550px){
   header{
     .navigation-panel{
       .subcontainer{
@@ -109,7 +109,7 @@ header{
   }
 }
 
-@media only screen and (max-width: 1140px) {
+@media only screen and (max-width: 1320px) {
   header{
     .navigation-panel{
       .subcontainer{
