--- a/studiop-brath/src/components/sass/footer.scss
+++ b/studiop-brath/src/components/sass/footer.scss
@@ -18,6 +18,15 @@ footer{
                 color: #fff;
             }
 
+            .phone:hover{
+                cursor: pointer;
+            }
+
+            .mail:hover{
+                cursor: pointer;
+            }
+
+
             .displayProop{
                 display: flex;
                 gap: 0.3em;
@@ -57,6 +66,10 @@ footer{
             font-style: italic;
             text-decoration: underline;
             color: rgba($color: #fff, $alpha: 0.7);
+
+            &:hover{
+                cursor: pointer;
+            }
         }
 
     }
