--- a/studiop-brath/src/components/sass/header.scss
+++ b/studiop-brath/src/components/sass/header.scss
@@ -103,8 +103,8 @@ header{
     }
 
     .workTime{
-      padding: 1.5em 0;
-      text-align: center;
+      //padding: 1.5em 0;
+      //text-align: center;
     }
   }
 }
@@ -127,7 +127,7 @@ header{
   
 }
 
-@media only screen and (max-width: 1100px){
+@media only screen and (max-width: 1180px){
   header{
     .navigation-panel{
       padding: 1em;
@@ -196,8 +196,8 @@ header{
     }
 
     .workTime{
-      padding: 1.5em 0;
-      text-align: center;
+      //padding: 1.5em 0;
+      //text-align: center;
     }
   }
 }
